# claude-practice

./: .gitignore  pyproject.toml
module2/task01_developer-platform/: Developer_Platform.ipynb
module2/task02_prompt-rescue/: README.md
task03-evals/: README.md
task03_developer-platform/: Developer_Platform.ipynb  README.md
task04-inference-optimization/: Inference_Optimization.ipynb
task04_prompt-rescue/: Prompt_Rescue_solo.ipynb
task05-evals/: Building_an_Eval.ipynb  agent.py
task06-inference-optimization/: Inference_Optimization.ipynb  README.md
task07-claude-code-rfp-agent/: index.md
task07-claude-code-rfp-agent/.claude/: settings.json
task07-claude-code-rfp-agent/.claude/agents/: competitive.md  deal-desk-orchestrator.md  legal.md  pricing.md  risk-assessment.md  technical-fit.md
task07-claude-code-rfp-agent/.claude/skills/docx/: SKILL.md
task07-claude-code-rfp-agent/.claude/skills/risk-assessment/: SKILL.md
