[project]
name = "claude-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.111.0",
    "matplotlib>=3.11.0",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
